dart, windows, android: alter app start api, adding env
- pass name, cmd(list), env(map) to native
- windows: handle cmd and env with CreateProcess
- android: handle cmd and env with ProcessBuilder